--- a/src/gym/Gym.css
+++ b/src/gym/Gym.css
@@ -69,6 +69,8 @@
   .slider-button {
     width: 35px;
     height: 35px;
+    align-items: center;
+    justify-content: center;
     font-size: 18px;
     line-height: 35px;
   }
@@ -89,7 +91,7 @@
   max-width: 600px; /* Max width constraint */ 
   margin: auto; /* Center the form horizontally and vertically */
   position: absolute;
-  top: 0;
+  top: 80px;
   bottom: 0;
   left: 0;
   right: 0;
@@ -172,6 +174,9 @@
 }
 
 .card-style-1:hover, .card-style-2:hover, .card-style-3:hover {
+  transform: scale(1.05); /* Zoom in effect on hover */
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.7); /* Increase shadow size on hover */
+
 }
 
 /* Overlay */
