--- a/src/hotal/hotel.css
+++ b/src/hotal/hotel.css
@@ -6,7 +6,8 @@
   justify-content: center;
   height: 100vh;
   background-color: #e0e0e0; /* Softer background color */
-  padding-top: 70px;
+  padding: 40px;
+  padding-top: 90px;
   margin-top: 50px;
 }
 
